Use scroll pane to fix height overflow

--- a/src/main/resources/view/NewTheme.css
+++ b/src/main/resources/view/NewTheme.css
@@ -32,6 +32,10 @@
     -fx-font-family: "Segoe UI Semibold";
 }
 
+.scroll-pane {
+
+}
+
 .tab-pane {
     -fx-padding: 0 0 0 1;
 }
@@ -283,6 +287,15 @@
 
 .button:default:hover {
     -fx-background-color: derive(-fx-focus-color, 30%);
+}
+
+.scroll-pane {
+    -fx-background-color: transparent;
+}
+
+.scroll-pane > * {
+    -fx-border-width: 0;
+    -fx-background-color: transparent;
 }
 
 .dialog-pane {
